Bug fix: When first arriving to the site and seeing the intro modal a horizontal scroll bar appears briefly through the intro text (see attached)

--- a/web/less/other-budgets.less
+++ b/web/less/other-budgets.less
@@ -121,7 +121,7 @@
         background: url(../img/lhc_fade.png) center top no-repeat;
         padding: 15px 20px 15px 0;
         max-height: 363px;
-        overflow-y: scroll;
+        overflow-y: hidden;
         width: 94%;
 
         .loading-more {
